--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<slf4j.version>1.7.12</slf4j.version>
+		<logback.version>1.1.2</logback.version>
 		<spring.version>4.2.5.RELEASE</spring.version>
 		<spring.shell.version>1.1.0.RELEASE</spring.shell.version>
 		<mvn.dependency.plugin.version>2.10</mvn.dependency.plugin.version>
@@ -14,6 +16,7 @@
 	</properties>
 
 	<dependencies>
+		<!-- spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
@@ -24,6 +27,22 @@
 			<artifactId>spring-shell</artifactId>
 			<version>${spring.shell.version}</version>
 		</dependency>
+		<!-- logging -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+		</dependency>		
 	</dependencies>
 
 	<build>
